# unique-profile

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: decisions.md  file-locking-design.md  prompt-history.md
examples/: profile.json
src/unique_profile/: __init__.py  __main__.py  http_server.py  profile.py  server.py
tests/: TEST_SUMMARY.md  test_profile.py
